1、判断如果充电桩的数量少于5台的时候不显示更多按钮 2、充电桩列表界面的样式修改（交流桩的充电桩名称及充电桩数量显示的为黄色）

--- a/src/main/webapp/static/css/operation.css
+++ b/src/main/webapp/static/css/operation.css
@@ -543,12 +543,13 @@
 
 #xy-module-06 .xy-electric-quantity-group .xy-value {
     width: 557px;
-    height: 32px;
-    line-height: 32px;
+    height: 52px;
+    line-height: 52px;
     color: #ffffff;
     background-color: #2cbd2f;
     padding-left: 13px;
     float: left;
+    font-size: 42px;
 }
 
 #xy-module-06 .xy-electric-quantity-group .xy-unit {
