--- a/src/main/webapp/static/css/station_list.css
+++ b/src/main/webapp/static/css/station_list.css
@@ -37,15 +37,13 @@
     background-size: 100%;
 }
 
-#xy-module-01,
-#xy-module-02,
-#xy-module-03,
-#xy-module-04 {
+#xy-module-01{
     height: 512px;
+    box-shadow: 5px 5px 10px;
 }
 
 #xy-module-01 {
-    width: 602px;
+    width: 1290px;
 }
 
 #xy-module-01 .xy-date,
@@ -327,6 +325,7 @@
     font-size: 50px;
     text-align: center;
     position: absolute;
+    color: #f1a328;
 }
 
 #xy-row-2 .xy-sum {
@@ -336,6 +335,7 @@
     font-size: 50px;
     position: absolute;
     left: 642px;
+    color: #f1a328;
 }
 
 #xy-row-2 .xy-more {
@@ -518,8 +518,8 @@
 
 #xy-row-2-left {
     color: #71a1e5;
-    width: 1990px;
-    height: 1162px;
+    width: 5400px;
+    height: 2462px;
     /*background: url("imgs/device/xy-row-2-bg.png") no-repeat;*/
     float: left;
 }
@@ -579,4 +579,166 @@
     font-size: 50px;
     text-align: center;
     position: absolute;
+}
+
+#xy-row-2-left .xy-title-left{
+    color: #2f7cc4;
+    font-size: 36px;
+    font-weight: bold;
+    position: absolute;
+}
+
+#forlink{
+    color: yellow;
+}
+
+
+#xy-module-01 .xy-label {
+    width: 134px;
+    text-align: left;
+    padding-right: 20px;
+    float: left;
+    width: 800px;
+}
+
+#xy-module-01 .xy-status-group {
+    position: absolute;
+    height: 32px;
+    line-height: 32px;
+    width: 400px;
+    font-size: 28px;
+    color: #ffffff;
+}
+
+#xy-module-01 .xy-status-group .xy-value {
+    width: 120px;
+    float: left;
+    text-align: right;
+    padding-right: 10px;
+}
+
+#xy-module-01 .xy-status-group .xy-value-1{
+    background-color: #0075a9;
+}
+
+#xy-module-01 .xy-status-group .xy-unit {
+    width: 146px;
+    float: left;
+    padding-left: 20px;
+}
+
+#xy-module-01 .xy-status-group .xy-value-2 {
+    background-color: #ee822d;
+}
+
+#xy-module-01 .xy-status-group-1 {
+    left: 958px;
+    top: 340px;
+}
+
+#xy-module-01 .xy-status-group-2 {
+    left: 958px;
+    top: 412px;
+}
+
+#xy-module-01 .xy-electric-quantity-group {
+    width: 800px;
+    height: 98px;
+    position: absolute;
+}
+
+#xy-module-01 .xy-electric-quantity-group-1 {
+    left: 80px;
+    top: 500px;
+}
+
+#xy-module-01 .xy-electric-quantity-group-2 {
+    left: 80px;
+    top: 650px;
+}
+
+
+#xy-module-01 .xy-electric-quantity-group .xy-label {
+    height: 65px;
+    line-height: 40px;
+    font-size: 28px;
+    color: #2cbd2f;
+}
+
+#xy-module-01 .xy-electric-quantity-group .xy-value {
+    width: 557px;
+    height: 52px;
+    line-height: 52px;
+    color: #ffffff;
+    background-color: #2cbd2f;
+    padding-left: 13px;
+    float: left;
+    font-size: 42px;
+}
+
+#xy-module-01 .xy-electric-quantity-group .xy-unit {
+    width: 243px;
+    font-size: 28px;
+    line-height: 28px;
+    color: #2cbd2f;
+    float: left;
+    padding-left: 29px;
+    padding-top: 15px;
+}
+#xy-module-01 .xy-status-group-5 {
+    left: 958px;
+    top: 532px;
+}
+
+#xy-module-01 .xy-status-group-6 {
+    left: 958px;
+    top: 612px;
+}
+
+#xy-module-01 .xy-status-group-7 {
+    left: 958px;
+    top: 692px;
+}
+
+#xy-module-01 .xy-status-group-8 {
+    left: 958px;
+    top: 772px;
+}
+
+#xy-module-01 .xy-status-group .xy-value-5{
+    background-color: #5ac35e;
+}
+
+#xy-module-01 .xy-status-group .xy-value-6 {
+    background-color: #c82d3b;
+}
+
+#xy-module-01 .xy-status-group .xy-value-7{
+    background-color: #fbab00;
+}
+
+#xy-module-01 .xy-status-group .xy-value-8 {
+    background-color: #3b3b3b;
+}
+
+#xy-module-01 .xy-status-group .xy-label {
+    width: 134px;
+    text-align: right;
+    padding-right: 20px;
+    float: left;
+}
+#elemetntDiv{
+    position: absolute;
+}
+
+.xy-station-pic{
+    position: absolute;
+    left: 30px;
+    top: 220px;
+    background-repeat:no-repeat;
+    background-size: cover;
+    height: 250px;
+    width: 500px;
+    border: 2px solid;
+    box-shadow: 5px 5px 20px;
 }
