--- a/src/main/webapp/static/css/station_list.css
+++ b/src/main/webapp/static/css/station_list.css
@@ -32,7 +32,6 @@
 #xy-row-2 {
     margin-top: 20px;
     height: 122px;
-    width: 5750px;
     background: url("imgs/device/xy-row-2-bg-header.png") no-repeat;
     background-size: 100%;
 }
@@ -318,7 +317,7 @@
     top: 425px;
 }
 
-#xy-row-2 .xy-title {
+#xy-row-2 .xy-title-1 {
     width: 420px;
     height: 122px;
     line-height: 122px;
@@ -326,6 +325,20 @@
     text-align: center;
     position: absolute;
     color: #f1a328;
+    background-color: #1C3550;
+    cursor: pointer;
+}
+
+#xy-row-2 .xy-title-2 {
+    width: 420px;
+    height: 122px;
+    line-height: 122px;
+    font-size: 50px;
+    text-align: center;
+    position: absolute;
+    color: #f1a328;
+    left:600px;
+    cursor: pointer;
 }
 
 #xy-row-2 .xy-sum {
@@ -334,7 +347,7 @@
     line-height: 122px;
     font-size: 50px;
     position: absolute;
-    left: 642px;
+    left: 1062px;
     color: #f1a328;
 }
 
@@ -518,10 +531,9 @@
 
 #xy-row-2-left {
     color: #71a1e5;
-    width: 5400px;
-    height: 2462px;
     /*background: url("imgs/device/xy-row-2-bg.png") no-repeat;*/
     float: left;
+    top:100px;
 }
 
 #xy-row-2-right {
@@ -770,4 +782,37 @@
     width: 500px;
     border: 2px solid;
     box-shadow: 5px 5px 20px;
+}
+
+.xy-camera-pic{
+    position: absolute;
+    height: 96px;
+    width: 96px;
+    top: 170px;
+    right: 60px;
+    background-image: url(/xiyuanweb-charging/static/css/imgs/station-list/video_camera.png);
+}
+
+.hiddenDiv{
+    position:fixed;
+    left:0;
+    top:0;
+    height: 100%;
+    width:100%;
+    background-color:#F0F0F0;
+    opacity:0.7;
+    filter:alpha(opacity=70);
+    z-index: 98;
+    display: none;
+}
+
+.camera-pic-div{
+    position: fixed;
+    top: 27%;
+    left: 28%;
+    height: 4000px;
+    width: 2500px;
+    display: none;
+    z-index: 99;
+    background-size: contain;
 }
